added icons to why python section of pywebdev index

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>PyWebDev</title>
 </head>
@@ -52,16 +53,19 @@
             <h2>Why Python?</h2>
             <div class="grid-3-cols">
                 <div>
+                    <i class="ph ph-book-open"></i>
                     <h3>Rich Standard Library</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptates, accusamus
                         dignissimos molestiae, quidem doloremque tenetur nec</p>
                 </div>
                 <div>
+                    <i class="ph ph-code"></i>
                     <h3>Easy and Readable</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptates, accusamus
                         dignissimos molestiae, quidem doloremque tenetur nec</p>
                 </div>
                 <div>
+                    <i class="ph ph-stack-simple"></i>
                     <h3>OOP</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptates, accusamus
                         dignissimos molestiae, quidem doloremque tenetur nec</p>
@@ -99,12 +103,15 @@
                         <h3 class="framework-title">Django</h3>
                         <ul class="framework-details">
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Great for fully-fledged web apps.</span>
                             </li>
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Strong Database Integration</span>
                             </li>
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Models-Templates-Views Architecture</span>
                             </li>
                         </ul>
@@ -118,12 +125,15 @@
                         <h3 class="framework-title">Flask</h3>
                         <ul class="framework-details">
                             <li>
-                                <span>Provides simple and manageable solutions.</span>
+                                <i class="small-li-icon ph-circle"></i>
+                                <span>Simple and manageable solutions.</span>
                             </li>
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Great for lean functionality.</span>
                             </li>
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Prototype Building solution.</span>
                             </li>
                         </ul>
@@ -137,12 +147,15 @@
                         <h3 class="framework-title">Falcon</h3>
                         <ul class="framework-details">
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Minimalist ASGI/WSGI framework</span>
                             </li>
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Encourages the REST architectural style</span>
                             </li>
                             <li>
+                                <i class="small-li-icon ph-circle"></i>
                                 <span>Lean solution</span>
                             </li>
                         </ul>
