removed blue subheading and added horizontal padding to index

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -74,8 +74,9 @@
         </section>
 
         <section class="testimonial-section">
+            <!-- <img src="../images/python-logo.png" alt="" id="small-python"> -->
             <div class="grid-3-cols">
-                <img src="../images/python-code.jpg" alt="python code on screen">
+                <img src="../images/flask-code.png" alt="python code on screen">
                 <div class="testimonial-flex-box">
                     <h2 class="testimonial-title">
                         <span id="simple">Simple. </span>
@@ -89,17 +90,16 @@
                         between developers working on the same project much more efficient.
                     </blockquote>
                     <p class="testimonial-author"> - Jose Servin (PyWebDev Community Member)</p>
-                    <img src="../images/python-logo.png" alt="" id="small-python">
                 </div>
             </div>
         </section>
 
         <section>
-            <h2>Python Frameworks</h2>
+            <h2>Python Web Frameworks</h2>
             <div class="grid-3-cols">
                 <figure>
                     <div class="framework-box">
-                        <img src="../images/python-code.jpg" alt="Django logo" class="framework-image">
+                        <img src="../images/Django.svg" alt="Django logo" class="framework-image">
                         <h3 class="framework-title">Django</h3>
                         <ul class="framework-details">
                             <li>
@@ -108,20 +108,20 @@
                             </li>
                             <li>
                                 <i class="small-li-icon ph-circle"></i>
-                                <span>Strong Database Integration</span>
+                                <span>Strong Database Integration.</span>
                             </li>
                             <li>
                                 <i class="small-li-icon ph-circle"></i>
-                                <span>Models-Templates-Views Architecture</span>
+                                <span>Model-Template-View Architecture</span>
                             </li>
                         </ul>
-                        <button class="button button-small">Learn More</button>
+                        <a role="button" class="button button-small" href="#">Learn More</a>
                     </div>
 
                 </figure>
                 <figure>
                     <div class="framework-box">
-                        <img src="../images/python-code.jpg" alt="Flask logo" class="framework-image">
+                        <img src="../images/flask-logo.svg" alt="Flask logo" class="framework-image">
                         <h3 class="framework-title">Flask</h3>
                         <ul class="framework-details">
                             <li>
@@ -137,29 +137,29 @@
                                 <span>Prototype Building solution.</span>
                             </li>
                         </ul>
-                        <button class="button button-small">Learn More</button>
+                        <a role="button" class="button button-small" href="#">Learn More</a>
                     </div>
 
                 </figure>
                 <figure>
                     <div class="framework-box">
-                        <img src="../images/python-code.jpg" alt="Flacon logo" class="framework-image">
+                        <img src="../images/falcon-logo.svg" alt="Flacon logo" class="framework-image">
                         <h3 class="framework-title">Falcon</h3>
                         <ul class="framework-details">
                             <li>
                                 <i class="small-li-icon ph-circle"></i>
-                                <span>Minimalist ASGI/WSGI framework</span>
+                                <span>Minimalist ASGI/WSGI framework.</span>
                             </li>
                             <li>
                                 <i class="small-li-icon ph-circle"></i>
-                                <span>Encourages the REST architectural style</span>
+                                <span>REST architectural style.</span>
                             </li>
                             <li>
                                 <i class="small-li-icon ph-circle"></i>
-                                <span>Lean solution</span>
+                                <span>Lean solution.</span>
                             </li>
                         </ul>
-                        <button class="button button-small">Learn More</button>
+                        <a role="button" class="button button-small" href="#">Learn More</a>
                     </div>
                 </figure>
             </div>
