catching up repo

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -76,7 +76,7 @@
         <section class="testimonial-section">
             <!-- <img src="../images/python-logo.png" alt="" id="small-python"> -->
             <div class="grid-3-cols">
-                <img src="../images/flask-code.png" alt="python code on screen">
+                <img src="../images/flask-code.png" alt="python code on screen" id="python-code">
                 <div class="testimonial-flex-box">
                     <h2 class="testimonial-title">
                         <span id="simple">Simple. </span>
