--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -42,7 +42,13 @@
                                 <li><a href="#">Java</a></li>
                             </ul> -->
                     </li>
-                    <li> <a href="#" class="top-nav-elements"> About</a></li>
+                    <li> <a href="#" class="top-nav-elements"> Projects</a>
+                        <ul class="navbar-dropdown">
+                            <li class="navbar-drowndown-element"><a href="Guess-My-Number/index.html"
+                                    target="_blank">Guess my Number
+                                    Game </a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
