removed main centered div and added background colors for each section

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -19,55 +19,59 @@
 </head>
 
 <body>
-    <div class="main-container">
-        <div class="grid-2-cols nav-grid">
-            <p id="navbar-logo-text">PyWebDev.org</p>
-            <nav>
-                <ul class="parent-navbar">
-                    <li> <a href="#" class="top-nav-elements"> Community</a></li>
-                    <li> <a href="#" class="top-nav-elements"> Docs</a></li>
-                    <li>
-                        <a href="#" class="top-nav-elements"> Frontend</a>
-                        <!-- <ul class="navbar-dropdown">
+    <section class="header-section">
+        <section class="content-container">
+            <div class="grid-2-cols nav-grid">
+                <p id="navbar-logo-text">PyWebDev.org</p>
+                <nav>
+                    <ul class="parent-navbar">
+                        <li> <a href="#" class="top-nav-elements"> Community</a></li>
+                        <li> <a href="#" class="top-nav-elements"> Docs</a></li>
+                        <li>
+                            <a href="#" class="top-nav-elements"> Frontend</a>
+                            <!-- <ul class="navbar-dropdown">
                                 <li><a href="#">HTML</a></li>
                                 <li><a href="#">CSS</a></li>
                                 <li><a href="#">JavaScript</a></li>
                             </ul> -->
-                    </li>
-                    <li>
-                        <a href="#" class="top-nav-elements"> Backend</a>
-                        <!-- <ul class="navbar-dropdown">
+                        </li>
+                        <li>
+                            <a href="#" class="top-nav-elements"> Backend</a>
+                            <!-- <ul class="navbar-dropdown">
                                 <li><a href="#">Python</a></li>
                                 <li><a href="#">PHP</a></li>
                                 <li><a href="#">Java</a></li>
                             </ul> -->
-                    </li>
-                    <li> <a href="#" class="top-nav-elements"> Projects</a>
-                        <ul class="navbar-dropdown">
-                            <li class="navbar-drowndown-element"><a href="Guess-My-Number/index.html"
-                                    target="_blank">Guess my Number
-                                    Game </a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <header class="grid-2-cols">
-            <div class="header-box">
-                <h1 class="header-title">Welcome Python WebDevs</h1>
-                <p class="header-text">Join the community to meet other Python Web Developers! Whether you're
-                    searching for Docs, want to stay up to date on interesting topics like Bootstrap, Flask
-                    and Frontend trends or simply want to meet other PyWebDevs - join now!
-                </p>
-                <a role="button" class="button button-big" href="#">Join the Community</a>
+                        </li>
+                        <li> <a href="#" class="top-nav-elements"> Projects</a>
+                            <ul class="navbar-dropdown">
+                                <li class="navbar-drowndown-element"><a href="Guess-My-Number/index.html"
+                                        target="_blank">Guess my Number
+                                        Game </a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <div class="header-images">
-                <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
-                <img src="../images/dark-code-sc.png" alt="dark-theme-code" class="dark-theme-code">
-            </div>
-        </header>
+            <header class="grid-2-cols">
+                <div class="header-box">
+                    <h1 class="header-title">Welcome Python WebDevs</h1>
+                    <p class="header-text">Join the community to meet other Python Web Developers! Whether you're
+                        searching for Docs, want to stay up to date on interesting topics like Bootstrap, Flask
+                        and Frontend trends or simply want to meet other PyWebDevs - join now!
+                    </p>
+                    <a role="button" class="button button-big" href="#">Join the Community</a>
+                </div>
+                <div class="header-images">
+                    <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
+                    <img src="../images/dark-code-sc.png" alt="dark-theme-code" class="dark-theme-code">
+                </div>
+            </header>
+        </section>
+    </section>
 
-        <section class="why-section">
+    <section class="why-section">
+        <section class="content-container">
             <h2>Why Python?</h2>
             <div class="grid-3-cols">
                 <div>
@@ -90,8 +94,10 @@
                 </div>
             </div>
         </section>
+    </section>
 
-        <section class="testimonial-section">
+    <section class="testimonial-section">
+        <section class="content-container testimonial-content">
             <!-- <img src="../images/python-logo.png" alt="" id="small-python"> -->
             <div class="grid-3-cols">
                 <img src="../images/flask-code.png" alt="python code on screen" id="python-code">
@@ -111,8 +117,10 @@
                 </div>
             </div>
         </section>
+    </section>
 
-        <section>
+    <section class="framework-section">
+        <section class="content-container">
             <h2>Python Web Frameworks</h2>
             <div class="grid-3-cols">
                 <figure>
@@ -182,16 +190,17 @@
                 </figure>
             </div>
         </section>
+    </section>
 
 
-        <!-- <section>
+    <!-- <section>
             <div class="courses-flex-box">
                 <h2>Courses to get Started</h2>
                 <div class="course-1"></div>
                 <div class="course-2"></div>
             </div>
         </section> -->
-    </div>
+
     <!-- <footer class="grid-6-cols">
         <div class="footer-div"></div>
         <div class="footer-div"></div>
