adding background gradient split to index

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -71,6 +71,7 @@
     </section>
 
     <section class="why-section">
+        <div class="why-section-angle"></div>
         <section class="content-container">
             <h2>Why Python?</h2>
             <div class="grid-3-cols">
