--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -121,6 +121,7 @@
     </section>
 
     <section class="framework-section">
+        <div class="framework-section-angle"></div>
         <section class="content-container">
             <h2>Python Web Frameworks</h2>
             <div class="grid-3-cols">
@@ -194,13 +195,17 @@
     </section>
 
 
-    <!-- <section>
-            <div class="courses-flex-box">
-                <h2>Courses to get Started</h2>
-                <div class="course-1"></div>
-                <div class="course-2"></div>
+    <section class="community-section">
+        <div class="content-container">
+            <h2>Join our Growing Community</h2>
+            <div class="community-flex-box">
+                <h3>Collaborate </h3>
+                <h3>Mentor</h3>
+                <h3>Contribute</h3>
+                <h3>Learn</h3>
             </div>
-        </section> -->
+        </div>
+    </section>
 
     <!-- <footer class="grid-6-cols">
         <div class="footer-div"></div>
