added grid to Join our Community section

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -198,12 +198,19 @@
     <section class="community-section">
         <div class="content-container">
             <h2>Join our Growing Community</h2>
-            <div class="community-flex-box">
-                <h3>Collaborate </h3>
-                <h3>Mentor</h3>
-                <h3>Contribute</h3>
-                <h3>Learn</h3>
+            <div class="community-grid">
+                <!-- <a class="community-element" href="#">HTML</a> -->
+                <img src="../images/html.png" alt="" class="community-element" id="html">
+                <a class="community-element" href="#"> Collaborate</Collaborate></a>
+                <a class="community-element" href="#">JavaScript</a>
+                <a class="community-element" href="#">Mentor</a>
+                <a class="community-element" href="#">Python</a>
+                <a class="community-element" href="#">Contribute</a>
+                <a class="community-element" href="#">CSS</a>
+                <a class="community-element" href="#">Learn</a>
+                <a class="community-element" href="#">Docker</a>
             </div>
+        </div>
         </div>
     </section>
 
