--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -19,16 +19,17 @@
 </head>
 
 <body>
+
     <section class="header-section">
         <section class="content-container">
             <div class="grid-2-cols nav-grid">
                 <p id="navbar-logo-text">PyWebDev.org</p>
                 <nav>
                     <ul class="parent-navbar">
-                        <li> <a href="#" class="top-nav-elements"> Community</a></li>
-                        <li> <a href="#" class="top-nav-elements"> Docs</a></li>
+                        <li> <a href="#" class="parent-nav-elements"> Community</a></li>
+                        <li> <a href="#" class="parent-nav-elements"> Docs</a></li>
                         <li>
-                            <a href="#" class="top-nav-elements"> Frontend</a>
+                            <a href="#" class="parent-nav-elements"> Frontend</a>
                             <!-- <ul class="navbar-dropdown">
                                 <li><a href="#">HTML</a></li>
                                 <li><a href="#">CSS</a></li>
@@ -36,18 +37,23 @@
                             </ul> -->
                         </li>
                         <li>
-                            <a href="#" class="top-nav-elements"> Backend</a>
+                            <a href="#" class="parent-nav-elements"> Backend</a>
                             <!-- <ul class="navbar-dropdown">
                                 <li><a href="#">Python</a></li>
                                 <li><a href="#">PHP</a></li>
                                 <li><a href="#">Java</a></li>
                             </ul> -->
                         </li>
-                        <li> <a href="#" class="top-nav-elements"> Projects</a>
-                            <ul class="navbar-dropdown">
-                                <li class="navbar-drowndown-element"><a href="Guess-My-Number/index.html"
-                                        target="_blank">Guess my Number
-                                        Game </a></li>
+                        <li> <a href="#" class="parent-nav-elements"> Projects</a>
+                            <ul class="projects-dropdown">
+                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
+                                        target="_blank">Guess my Number Game </a></li>
+                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
+                                        target="_blank">Guess my Number Game </a></li>
+                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
+                                        target="_blank">Guess my Number Game </a></li>
+                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
+                                        target="_blank">Guess my Number Game </a></li>
                             </ul>
                         </li>
                     </ul>
@@ -60,7 +66,7 @@
                         searching for Docs, want to stay up to date on interesting topics like Bootstrap, Flask
                         and Frontend trends or simply want to meet other PyWebDevs - join now!
                     </p>
-                    <a role="button" class="button button-big" href="#">Join the Community</a>
+                    <a role="button" class="button button-big" href="#">Join our Community</a>
                 </div>
                 <div class="header-images">
                     <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
