building subcomponent navbar

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -26,35 +26,34 @@
                 <p id="navbar-logo-text">PyWebDev.org</p>
                 <nav>
                     <ul class="parent-navbar">
-                        <li> <a href="#" class="parent-nav-elements"> Community</a></li>
-                        <li> <a href="#" class="parent-nav-elements"> Docs</a></li>
+                        <li> <a href="#" class="nav-elements hover-underline-animation"> Community</a></li>
+                        <li> <a href="#" class="nav-elements hover-underline-animation"> Docs</a></li>
                         <li>
-                            <a href="#" class="parent-nav-elements"> Frontend</a>
-                            <!-- <ul class="navbar-dropdown">
-                                <li><a href="#">HTML</a></li>
-                                <li><a href="#">CSS</a></li>
-                                <li><a href="#">JavaScript</a></li>
-                            </ul> -->
+                            <a href="#" class="nav-elements hover-underline-animation"> Frontend</a>
                         </li>
                         <li>
-                            <a href="#" class="parent-nav-elements"> Backend</a>
-                            <!-- <ul class="navbar-dropdown">
-                                <li><a href="#">Python</a></li>
-                                <li><a href="#">PHP</a></li>
-                                <li><a href="#">Java</a></li>
-                            </ul> -->
+                            <a href="#" class="nav-elements hover-underline-animation"> Backend</a>
                         </li>
-                        <li> <a href="#" class="parent-nav-elements"> Projects</a>
-                            <ul class="projects-dropdown">
-                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
-                                        target="_blank">Guess my Number Game </a></li>
-                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
-                                        target="_blank">Guess my Number Game </a></li>
-                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
-                                        target="_blank">Guess my Number Game </a></li>
-                                <li class="navbar-dropdown-element"><a href="Guess-My-Number/index.html"
-                                        target="_blank">Guess my Number Game </a></li>
-                            </ul>
+                        <li id="projects"> <a href="#" class="nav-elements hover-underline-animation"> Projects</a>
+                            <div class="submenu-projects">
+                                <ul>
+                                    <li>
+                                        <a href="Guess-My-Number/index.html" target="_blank" class="nav-elements">
+                                            Guess my Number Game
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="Guess-My-Number/index.html" target="_blank" class="nav-elements">
+                                            Calculator App
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="Guess-My-Number/index.html" target="_blank" class="nav-elements">
+                                            Weather GUI
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 </nav>
