added subnavbar for projects nav element

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -25,37 +25,37 @@
             <div class="grid-2-cols nav-grid">
                 <p id="navbar-logo-text">PyWebDev.org</p>
                 <nav>
-                    <ul class="parent-navbar">
-                        <li> <a href="#" class="nav-elements hover-underline-animation"> Community</a></li>
-                        <li> <a href="#" class="nav-elements hover-underline-animation"> Docs</a></li>
-                        <li>
-                            <a href="#" class="nav-elements hover-underline-animation"> Frontend</a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-elements hover-underline-animation"> Backend</a>
-                        </li>
-                        <li id="projects"> <a href="#" class="nav-elements hover-underline-animation"> Projects</a>
-                            <div class="submenu-projects">
-                                <ul>
-                                    <li>
-                                        <a href="Guess-My-Number/index.html" target="_blank" class="nav-elements">
-                                            Guess my Number Game
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="Guess-My-Number/index.html" target="_blank" class="nav-elements">
-                                            Calculator App
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="Guess-My-Number/index.html" target="_blank" class="nav-elements">
-                                            Weather GUI
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="nav-div">
+                        <ul>
+                            <li> <a href="">Frontend</a></li>
+                            <li> <a href="">Backend</a></li>
+                            <li> <a href="">Docs</a></li>
+                            <li> <a href="">Projects</a>
+                                <div class="submenu-projects">
+                                    <ul>
+                                        <li>
+                                            <a href="Guess-My-Number/index.html" target="_blank">
+                                                Guess my Number Game
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="nav-elements">
+                                                Calculator App
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                Weather GUI
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li> <a href="">Community</a></li>
+                        </ul>
+
+                    </div>
+
                 </nav>
             </div>
             <header class="grid-2-cols">
