building header team section

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -61,11 +61,25 @@
             <header class="grid-2-cols">
                 <div class="header-box">
                     <h1 class="header-title">Welcome Python WebDevs</h1>
-                    <p class="header-text">Join the community to meet other Python Web Developers! Whether you're
-                        searching for Docs, want to stay up to date on interesting topics like Bootstrap, Flask
-                        and Frontend trends or simply want to meet other PyWebDevs - join now!
+                    <p class="header-text">Join our growing community and meet other Python Web Developers! Whether
+                        you're searching for Docs, want to stay up to date on interesting topics like Bootstrap, Flask
+                        and Frontend trends or simply want to collaborate with others - join now!
                     </p>
                     <a role="button" class="button button-big" href="#">Join our Community</a>
+                    <div class="community">
+                        <div class="community-members">
+                            <img src="../images/community-members/team-member-1.jpg" alt="team member">
+                            <img src="../images/community-members/team-member-2.jpg" alt="team member">
+                            <img src="../images/community-members/team-member-3.jpg" alt="team member">
+                            <img src="../images/community-members/team-member-4.jpg" alt="team member">
+                            <img src="../images/community-members/team-member-5.jpg" alt="team member">
+                            <img src="../images/community-members/team-member-6.jpg" alt="team member">
+                        </div>
+                        <div class="community-text">
+                            <p>5,000+ active members and growing!</p>
+                        </div>
+
+                    </div>
                 </div>
                 <div class="header-images">
                     <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
