reformat images to improve page load time

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -27,10 +27,10 @@
                 <nav>
                     <div class="nav-div">
                         <ul>
-                            <li> <a href="">Frontend</a></li>
-                            <li> <a href="">Backend</a></li>
-                            <li> <a href="">Docs</a></li>
-                            <li> <a href="">Projects</a>
+                            <li> <a href=""> <i class="nav-icon ph-brackets-curly-light"></i> Frontend</a></li>
+                            <li> <a href=""> <i class="nav-icon ph-code-light"></i> Backend</a></li>
+                            <li> <a href=""> <i class="nav-icon ph-file-code-light"></i> Docs</a></li>
+                            <li> <a href=""> <i class="nav-icon ph-codepen-logo-light"></i> Projects</a>
                                 <div class="submenu-projects">
                                     <ul>
                                         <li>
@@ -51,14 +51,14 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li> <a href="">Community</a></li>
+                            <li> <a href=""> <i class="nav-icon ph-users-three-light"></i> Community</a></li>
                         </ul>
 
                     </div>
 
                 </nav>
             </div>
-            <header class="grid-2-cols">
+            <header class="grid-2-cols header-grid">
                 <div class="header-box">
                     <h1 class="header-title">Welcome Python WebDevs</h1>
                     <p class="header-text">Join our growing community and meet other Python Web Developers! Whether
@@ -74,16 +74,18 @@
                             <img src="../images/community-members/team-member-4.jpg" alt="team member">
                             <img src="../images/community-members/team-member-5.jpg" alt="team member">
                             <img src="../images/community-members/team-member-6.jpg" alt="team member">
+                            <img src="../images/community-members/team-member-7.jpg" alt="team member">
                         </div>
                         <div class="community-text">
-                            <p>5,000+ active members and growing!</p>
+                            <p> <span> 5,000+ </span> active members and growing!</p>
                         </div>
 
                     </div>
                 </div>
                 <div class="header-images">
-                    <img src="../images/light-code-sc.png" alt="light-theme-code" class="light-theme-code">
-                    <img src="../images/dark-code-sc.png" alt="dark-theme-code" class="dark-theme-code">
+                    <img src="../images/dark-code.png" alt="dark-theme-code" class="dark-theme-python">
+                    <img src="../images/light-code.png" alt="light-theme-code" class="light-theme-python">
+                    <img src="../images/html-code.png" alt="screenshot of html-code on screen" class="dark-theme-html">
                 </div>
             </header>
         </section>
